--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ build/
 # Local configuration file (sdk path, etc)
 local.properties
 
-# Eclipse project files
+# IDE project files
 .classpath
 .project
+*.iml
